# SearXNG-MIO

./: .gitignore  manage  pyproject.toml  setup.py
.github/workflows/: container.yml  data-update.yml  documentation.yml  integration.yml  l10n.yml
docs/dev/: makefile.rst
searx/: ai_summarizer.py  settings.yml  webapp.py
searx/engines/: hoshimi.py
searx/hoshimi/: __init__.py  collector.py  embedding.py  migrate_model.py  milvus_store.py  vector_store.py
searx/plugins/: hoshimi_cache.py  hoshimi_collector.py
searx/templates/simple/: base.html  results.html
utils/: lib.sh  lib_sxng_container.sh  searxng.sh
